test/e2e/chainsaw/hybridgateway/common/_step_templates/apply-assert-gatewayConfiguration.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: apply-assert-gateway-configiuration
spec:
  try:
    - apply:
        resource:
          apiVersion: gateway-operator.konghq.com/v2beta1
          kind: GatewayConfiguration
          metadata:
            name: (join('-', [($test_name), 'gateway-configuration']))
            namespace: ($namespace)
          spec:
            konnect:
              authRef:
                # Reference the AuthConfig created by the previous template
                name: (join('-', [($test_name), 'konnect-api-auth']))
            dataPlaneOptions:
              deployment:
                podTemplateSpec:
                  spec:
                    containers:
                    - name: proxy
                      image: ($gateway_image)
    - assert:
        resource:
          apiVersion: gateway-operator.konghq.com/v2beta1
          kind: GatewayConfiguration
          metadata:
            name: (join('-', [($test_name), 'gateway-configuration']))
            namespace: ($namespace)
