test/e2e/chainsaw/hybridgateway/common/_step_templates/apply-assert-httprouteEcho.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: create-http-route
spec:
  try:
    - apply:
        resource:
          apiVersion: gateway.networking.k8s.io/v1
          kind: HTTPRoute
          metadata:
            name: ($route_name)
            namespace: ($route_namespace)
            labels:
              chainsaw/test: ($test_name)
          spec:
            parentRefs:
              - group: gateway.networking.k8s.io
                kind: Gateway
                name: ($gateway_name)
                namespace: ($gateway_namespace)
            rules:
              - matches:
                  - path:
                      type: PathPrefix
                      value: ($path_prefix)
                backendRefs:
                  - name: ($echo_name)
                    namespace: ($echo_namespace)
                    port: 1027
    
    - assert:
        resource:
          apiVersion: gateway.networking.k8s.io/v1
          kind: HTTPRoute
          metadata:
            name: ($route_name)
            namespace: ($route_namespace)
          status:
            parents:
              - parentRef:
                  name: ($gateway_name)
                  namespace: ($gateway_namespace)
                controllerName: konghq.com/gateway-operator
                (conditions[?type == 'Accepted']):
                  - status: "True"
                    reason: Accepted
                (conditions[?type == 'ResolvedRefs']):
                  - status: "True"
                    reason: ResolvedRefs
                (conditions[?type == 'KongRouteProgrammed']):
                  - status: "True"
                    reason: KongRouteProgrammed
                (conditions[?type == 'KongServiceProgrammed']):
                  - status: "True"
                    reason: KongServiceProgrammed
                (conditions[?type == 'KongUpstreamProgrammed']):
                  - status: "True"
                    reason: KongUpstreamProgrammed
                (conditions[?type == 'KongTargetProgrammed']):
                  - status: "True"
                    reason: KongTargetProgrammed
