test/e2e/chainsaw/hybridgateway/common/_step_templates/apply-assert-konnectAuthSecret.yaml
# Template for creating and asserting the Konnect authentication secret.
#
# Required bindings:
#   - auth_secret_name: The name of the Secret to be created.
#   - auth_secret_namespace: The namespace where the Secret will be created.
#   - konnect_token: The Konnect API token to be stored in the Secret.

apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: apply-assert-konnect-auth-secret
spec:
  try:
    - apply:
        resource:
          apiVersion: v1
          kind: Secret
          metadata:
            name: ($auth_secret_name)
            namespace: ($auth_secret_namespace)
            labels:
              konghq.com/credential: "konnect"
              konghq.com/secret: "true"
          type: Opaque
          stringData:
            token: ($konnect_token)
    - assert:
        resource:
          apiVersion: v1
          kind: Secret
          metadata:
            name: ($auth_secret_name)
            namespace: ($auth_secret_namespace)
            (labels."konghq.com/credential"): "konnect"
            (labels."konghq.com/secret"): "true"
          type: Opaque
