test/e2e/chainsaw/hybridgateway/common/_step_templates/apply-assert-tlsSecret.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: assert-tls-secret
spec:
  try:
    - script:
        env:
         - name: HOSTNAME
           value: ($sni_hostname)
        content: |
          bash ../common/scripts/generate_tls_certificate.sh
        outputs:
          # Output 1: Extract 'cert' from the JSON stdout.
          - name: cert_data
            value: (json_parse($stdout).cert)
          # Output 2: Extract 'key' from the same JSON stdout.
          - name: key_data
            value: (json_parse($stdout).key)
    - apply:
        resource:
          apiVersion: v1
          kind: Secret
          metadata:
            name: ($cert_secret_name)
            namespace: ($cert_secret_namespace)
            labels:
              konghq.com/secret: "true"
          type: kubernetes.io/tls
          stringData:
            tls.crt: ($cert_data)
            tls.key: ($key_data)
    - assert:
        resource:
          apiVersion: v1
          kind: Secret
          metadata:
            name: ($cert_secret_name)
            namespace: ($cert_secret_namespace)
            labels:
              konghq.com/secret: "true"
          type: kubernetes.io/tls
