test/e2e/chainsaw/hybridgateway/common/_step_templates/assert-kongCertificate.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: assert-kong-certificate
spec:
  try:
    - script:
        content: |
          bash ../common/scripts/konnecGatewayControlplane_name.sh
        outputs:
          - name: konnectgatewaycontrolplane_name
            value: (json_parse($stdout).cp_name)
    - assert:
        resource:
          apiVersion: configuration.konghq.com/v1alpha1
          kind: KongCertificate
          metadata:
            namespace: ($namespace)
            # Dynamic label validation.
            (labels."gateway-operator.konghq.com/hybrid-gateways-name"): ($gateway_name)
            (labels."gateway-operator.konghq.com/hybrid-gateways-namespace"): ($gateway_namespace)
            (labels."gateway-operator.konghq.com/managed-by"): 'Gateway'
            (labels."gateway-operator.konghq.com/listener-port"): (to_string($listener_https_port))
            # Dynamic annotation validation.
            (annotations."gateway-operator.konghq.com/hybrid-gateways"): (join('/', [($gateway_namespace), ($gateway_name)]))
            ownerReferences:
              - apiVersion: gateway.networking.k8s.io/v1
                kind: Gateway
                name: ($gateway_name)
                controller: true
          spec:
            secretRef:
              name: ($cert_secret_name)
              namespace: ($cert_secret_namespace)
            controlPlaneRef:
              type: konnectNamespacedRef
              konnectNamespacedRef:
                name: ($konnectgatewaycontrolplane_name)
          status:
            # Multi-condition status check.
            (conditions[?type == 'Programmed']):
              - status: 'True'
                reason: Programmed
            (conditions[?type == 'ControlPlaneRefValid']):
              - status: 'True'
                reason: Valid
            (conditions[?type == 'APIAuthResolvedRef']):
              - status: 'True'
                reason: ResolvedRef
            (conditions[?type == 'APIAuthValid']):
              - status: 'True'
                reason: Valid
