test/e2e/chainsaw/hybridgateway/common/_step_templates/assert-kongUstream.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: assert-kong-upstream
spec:
  try:
    - script:
        env:
         - name: NAMESPACE
           value: ($namespace)
         - name: GATEWAY_NAME
           value: ($gateway_name)
         - name: GATEWAY_NAMESPACE
           value: ($gateway_namespace)
         - name: HTTP_ROUTE_NAME
           value: ($http_route_name)
         - name: HTTP_ROUTE_NAMESPACE
           value: ($http_route_namespace)
        content: |
          bash ../common/scripts/konnecGatewayControlplane_name.sh
        outputs:
          - name: konnectgatewaycontrolplane_name
            value: (json_parse($stdout).cp_name)
    - assert:
        resource:
          apiVersion: configuration.konghq.com/v1alpha1
          kind: KongUpstream
          metadata:
            namespace: ($namespace)
            (labels."gateway-operator.konghq.com/hybrid-gateways-name" == ($gateway_name)): true
            (labels."gateway-operator.konghq.com/hybrid-gateways-namespace" == ($gateway_namespace)): true
            (labels."gateway-operator.konghq.com/managed-by" == 'HTTPRoute'): true
            (annotations."gateway-operator.konghq.com/hybrid-routes" | contains(@, join('/', [($http_route_namespace), ($http_route_name)]))): true
            (annotations."gateway-operator.konghq.com/hybrid-gateways" == join('/', [($gateway_namespace), ($gateway_name)])): true
          spec:
            controlPlaneRef:
              type: konnectNamespacedRef
              konnectNamespacedRef:
                name: ($konnectgatewaycontrolplane_name)
          status:
            # Filter conditions to check for required status
            (conditions[?type == 'Programmed']):
              - status: 'True'
                reason: Programmed
            (conditions[?type == 'ControlPlaneRefValid']):
              - status: 'True'
                reason: Valid
            (conditions[?type == 'APIAuthResolvedRef']):
              - status: 'True'
                reason: ResolvedRef
            (conditions[?type == 'APIAuthValid']):
              - status: 'True'
                reason: Valid
            # Assert Konnect integration fields are populated
            (konnect.controlPlaneID != null): true
            (konnect.id != null): true
